--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!-- Html -->
-<html>
-  <title>
-    
-  </title>
-  <body>
-    
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <title>SPT-TinyConfig</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  </head>
+  <body></body>
+  <script src="main.js"></script>
 </html>
