--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <title>SPT-TinyConfig</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <!-- Simple CSS (unminified) -->
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Hello, world</h1>
+      <p>Welcome to my website!</p>
+    </header>
+
+  <main>
+    <p>This is my new website and it's using Simple.css. It's really cool. If you want to use it too, you can <a href="https://simplecss.org">visit their site</a>.</p>
+  </main>
+
+  <footer>
+    <p>Jane Smith's website.</p>
+  </footer>
+  </body>
   <script src="main.js"></script>
 </html>
