--- a/src/pages/Globals.html
+++ b/src/pages/Globals.html
@@ -6,14 +6,13 @@
   <meta charset='utf-8'>
   <title></title>
   <link rel='stylesheet' type='text/css' media='screen'
-    href='../style/botconfig.css'>
+    href='../style/globals.css'>
 </head>
 
 <body>
 
 
-
-  <script src='../scripts/BotConfig.js'>
+  <script src='../scripts/Globals.js'>
 
   </script>
 </body>
