--- a/src/pages/BotConfig.html
+++ b/src/pages/BotConfig.html
@@ -14,53 +14,49 @@
   <div class="page">
 
     <header>
-      <div class="container">
-        <div class="logo">
-          <img src="../assets/images/tarkov/spt-logo-alt.png" alt="SPT-Logo"
-            title="SPT Logo"></img>
+      <div class="menu-wrap row align-c just-sb">
+        <div class="logo align-c just-self-s">
+          <img class="v-align" src="../assets/images/tarkov/spt-logo-alt.png"
+            alt="SPT-Logo" title="SPT Logo"></img>
         </div>
 
-        <div class="nav">
-          <button onclick="loadBots()" class="menubtn" id="nav_globals">
+        <div class="menu-hdr row align-c just-sb">
+          <button onclick="" class="menu-btn" id="nav_globals">
             <i class="arrow down"></i>
             Globals
           </button>
 
-          <button class="menubtn" id="nav_ai">
+          <button class="menu-btn" id="nav_ai">
             <i class="arrow down"></i>
             Bot AI
           </button>
-          <button class="menubtn" id="nav_traders">
+          <button class="menu-btn" id="nav_traders">
             <i class="arrow down"></i>
             Traders
           </button>
-          <button class="menubtn" id="nav_maps">
+          <button class="menu-btn" id="nav_maps">
             <i class="arrow down"></i>
             Maps
           </button>
-          <button class="menubtn" id="nav_equipment">
+          <button class="menu-btn" id="nav_equipment">
             <i class="arrow down"></i>
             Equipment
           </button>
-          <button class="menubtn" id="nav_loot">
+          <button class="menu-btn" id="nav_loot">
             <i class="arrow down"></i>
             Loot
           </button>
-          <button class="menubtn" id="nav_quests">
+          <button class="menu-btn" id="nav_quests">
             <i class="arrow down"></i>
             Quests
           </button>
-          <button class="menubtn" id="nav_profile">
+          <button class="menu-btn" id="nav_profile">
             <i class="arrow down"></i>
             Profile
           </button>
         </div>
 
-        <div class="nav_end">
-          <!-- <button class="btn secondary" id="saveBtn" title="Save file"
-              onclick="saveFile()"><span>Save</span></button>
-            <button class="btn secondary" id="loadBtn" title="Open data"
-              onclick="openFile()"><span>Load</span></button> -->
+        <div class="menu-hb align-c just-self-e">
           <svg width="64px" height="64px" viewBox="-2.4 -2.4 28.80 28.80"
             fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#dcdcdc">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -86,9 +82,12 @@
 
     </header>
 
+    <!-- Only one main tag per page,
+     signals primary content to browser. -->
     <main>
+
       <aside>
-        <div class="stack">
+        <div class="stack panel">
           <!-- <h1>Links for navigation</h1> -->
           <div class="sideNav">
             <button id="global" class="sideLink">
@@ -106,7 +105,7 @@
                 src="../assets/spt/3.11.3/SPT_Data/Server/images\prestige\675864eb86778bc82004127c.png"
                 width="32px" height="32px"> <span>User Profile</span>
             </button>
-            <button id="bots" class="sideLink">
+            <button onclick="toggleCardPanel()" id="bots" class="sideLink">
               <!-- data/SPT_Data/Server/images/quest/icon/5d69468a86f77452aa51d79d.png -->
               <!-- data/SPT_Data/Server/images/handbook/icon_ammo.png -->
               <img
@@ -163,9 +162,132 @@
         </div>
       </aside>
 
-      <section class="content">
+      <section class="content stack">
 
-        <div class="card_panel">
+        <div class="title-wrap">
+          <h3 id="botName">Killa</h3>
+          <button class="btn action warn" id="savePreset">
+            <span class="btnFace">Save Preset</span>
+          </button>
+          <button class="btn action active" id="loadPreset">
+            <span class="btnFace">Load Preset</span>
+          </button>
+          <button class="btn action warn" id="applyChanges">
+            <span class="btnFace">Apply Changes</span>
+          </button>
+        </div>
+
+        <div class="diff-wrap row">
+          <h3>AI Difficulty</h3>
+          <div class="btn-grid">
+            <button class="btn select" id="easy">
+              <span class="btnFace">Easy</span>
+            </button>
+            <button class="btn select secondary active" id="normal">
+              <span class="btnFace">Normal</span>
+            </button>
+            <button class="btn select secondary" id="hard">
+              <span class="btnFace">Hard</span>
+            </button>
+            <button class="btn select secondary" id="impossible">
+              <span class="btnFace">Impossible</span>
+            </button>
+            <input id="openFile" type="file" accept="application/json" hidden>
+          </div>
+        </div>
+
+        <div class="tab-wrap setting-wrap row">
+          <h3>Setting</h3>
+          <div class="tab-grid tabs" id="sectionTabs" role="tablist">
+
+            <button class="tab active" role="tab" aria-selected="true"
+              tabindex="0" data-pane="core">Core</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="mind">Mind</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="aiming">Aiming</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="look">Look</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="shoot">Shoot</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="scattering">Scattering</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="hearing">Hearing</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="boss">Boss</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="cover">Cover</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="grenade">Grenade</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="change">Change</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="move">Move</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="lay">Lay</button>
+            <button class="tab" role="tab" aria-selected="false" tabindex="-1"
+              data-pane="patrol">Patrol</button>
+
+          </div>
+        </div>
+
+        <div class="tab-container stack">
+
+          <div class="editor-wrap" data-pane="core">
+            <div id="ed_core" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="mind" hidden>
+            <div id="ed_mind" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="aiming" hidden>
+            <div id="ed_aiming" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="look" hidden>
+            <div id="ed_look" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="shoot" hidden>
+            <div id="ed_shoot" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="scattering" hidden>
+            <div id="ed_scattering" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="hearing" hidden>
+            <div id="ed_hearing" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="boss" hidden>
+            <div id="ed_boss" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="cover" hidden>
+            <div id="ed_cover" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="grenade" hidden>
+            <div id="ed_grenade" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="change" hidden>
+            <div id="ed_change" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="move" hidden>
+            <div id="ed_move" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="lay" hidden>
+            <div id="ed_lay" class="editor"></div>
+          </div>
+          <div class="editor-wrap" data-pane="patrol" hidden>
+            <div id="ed_patrol" class="editor"></div>
+          </div>
+
+        </div>
+
+        <div class="stack">
+          <h3>Preview</h3>
+          <iframe id="preview" class="preview"
+            sandbox="allow-same-origin allow-modals allow-forms"></iframe>
+        </div>
+
+
+        <!-- Card Panel Start -->
+        <div id="botPanel" class="card_panel">
           <div class="card">
             <h2>Killa</h2>
             <img src="../assets/images/tarkov/figurines/killa_fig.webp" alt="">
@@ -325,6 +447,66 @@
           </div>
         </div>
 
+        <div class="settings">
+
+          <div class="Aiming">
+            <code>
+                <textarea class="settings">
+                </textarea>   
+<!-- "AIMING_TYPE": 4,
+"ANYTIME_LIGHT_WHEN_AIM_100": 70,
+"ANY_PART_SHOOT_TIME": 5,
+"BAD_SHOOTS_MAX": 3,
+"BAD_SHOOTS_MIN": 1,
+"BASE_HIT_AFFECTION_DELAY_SEC": 0.3,
+"BASE_HIT_AFFECTION_MAX_ANG": 14,
+"BASE_HIT_AFFECTION_MIN_ANG": 28,
+"BASE_SHIEF": 0.15,
+"BASE_SHIEF_STATIONARY_GRENADE": 1.1,
+"BETTER_PRECICING_COEF": 0.9,
+"BOTTOM_COEF": 0.1,
+"BOT_MOVE_IF_DELTA": 3.01,
+"COEF_FROM_COVER": 0.45,
+"COEF_IF_MOVE": 1,
+"DAMAGE_PANIC_TIME": 11,
+"DAMAGE_TO_DISCARD_AIM_0_100": 70,
+"DANGER_UP_POINT": 1.3,
+"DIST_TO_SHOOT_NO_OFFSET": 3,
+"DIST_TO_SHOOT_TO_CENTER": 3,
+"FIRST_CONTACT_ADD_CHANCE_100": 99,
+"FIRST_CONTACT_ADD_SEC": 0.4,
+"HARD_AIM": 0.75,
+"HARD_AIM_CHANCE_100": 80,
+"MAX_AIMING_UPGRADE_BY_TIME": 0.25,
+"MAX_AIM_PRECICING": 2,
+"MAX_AIM_TIME": 1.5,
+"MAX_TIME_DISCARD_AIM_SEC": 1.2,
+"MIN_DAMAGE_TO_GET_HIT_AFFETS": 1,
+"MIN_TIME_DISCARD_AIM_SEC": 0.5,
+"NEXT_SHOT_MISS_CHANCE_100": 85,
+"NEXT_SHOT_MISS_Y_OFFSET": 0.5,
+"OFFSET_RECAL_ANYWAY_TIME": 1,
+"PANIC_ACCURATY_COEF": 1.2,
+"PANIC_COEF": 1.2,
+"PANIC_TIME": 2,
+"RECALC_DIST": 0.7,
+"RECALC_MUST_TIME": 3,
+"RECALC_SQR_DIST": 0.48999998,
+"SCATTERING_DIST_MODIF": 0.67,
+"SCATTERING_DIST_MODIF_CLOSE": 0.6,
+"SCATTERING_HAVE_DAMAGE_COEF": 2,
+"SHOOT_TO_CHANGE_PRIORITY": 5525,
+"SHPERE_FRIENDY_FIRE_SIZE": -0.1,
+"TIME_COEF_IF_MOVE": 1.1,
+"WEAPON_ROOT_OFFSET": 0.35,
+"XZ_COEF": 0.4,
+"XZ_COEF_STATIONARY_GRENADE": 0.8 -->
+                  
+                
+              </code>
+          </div>
+        </div>
+
       </section>
     </main>
 
@@ -342,7 +524,37 @@
 <script>
   // src='../scripts/BotConfig.js'
 
-  function loadBots() {
+
+
+
+  function toggleCardPanel() {
+
+    const panel = document.querySelector('div.card_panel');
+    if (panel.style.display != 'none') {
+      panel.style.display = 'none';
+    } else {
+      panel.style.display = 'flex';
+    }
+  }
+
+
+  // toggle class
+  function toggleclass(element, classname) {
+
+    const cp = document.querySelector(element);
+    const cards = cp.children;
+    for (let i = 0; i < cards.length; i++) {
+      //console.log(cards[i]);
+      if (cards[i].classList.contains(classname)) {
+        cards[i].classList.remove(classname);
+      } else {
+        cards[i].classList.add(classname);
+      }
+    }
+  }
+
+
+  function queryAPI(query) {
 
     console.log("Graphql query sent...");
 
